<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:orientation="vertical"
            android:background="@mipmap/bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <RelativeLayout
                android:padding="@dimen/_20sdp"
                android:background="@drawable/login_bg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                >

                <ImageView
                    android:layout_margin="@dimen/_20sdp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/logo">

                </ImageView>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Login to"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:gravity="center"
                        android:text="iPlumber"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />

                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center"
                    android:text="Lorem Ipsum is simply dummy text of  dummy text of typesetting industry"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_14sdp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_margin="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_8sdp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="@string/email"
                        android:inputType="text"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"></EditText>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_margin="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_8sdp">


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray">

                    </EditText>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/txtForogot"
                    android:padding="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/forgot_password"
                    android:textColor="@color/light_yellow"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:id="@+id/RLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/border_btn">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="20sp"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/llCreate"
                    android:padding="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Not registerred yet?"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:gravity="center"
                        android:text="@string/create_an_accoun"
                        android:textColor="@color/light_yellow"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</layout>
