<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:orientation="vertical"
            android:background="@mipmap/bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <RelativeLayout
                android:padding="@dimen/_20sdp"
                android:background="@drawable/login_bg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                >

                <ImageView
                    android:layout_margin="@dimen/_20sdp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/logo">

                </ImageView>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Sign up to"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:gravity="center"
                        android:text="mite.ly"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />

                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center"
                    android:text="Lorem Ipsum is simply dummy text of  dummy text of typesetting industry"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_14sdp" />

                <LinearLayout
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_margin="@dimen/_10sdp"
                        app:cardCornerRadius="@dimen/_8sdp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:hint="First Name"
                            android:inputType="text"
                            android:padding="@dimen/_10sdp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray">

                        </EditText>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_margin="@dimen/_10sdp"
                        app:cardCornerRadius="@dimen/_8sdp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:hint="Last Name"
                            android:inputType="text"
                            android:padding="@dimen/_10sdp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray">

                        </EditText>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_margin="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_8sdp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="@string/company_name"
                        android:inputType="text"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray">

                    </EditText>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_margin="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_8sdp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="@string/company_photo"
                        android:inputType="number"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"></EditText>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_margin="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_8sdp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="@string/license_number"
                        android:inputType="text"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"></EditText>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_margin="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_8sdp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="@string/address"
                        android:inputType="text"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"></EditText>

                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_margin="@dimen/_10sdp"
                        app:cardCornerRadius="@dimen/_8sdp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:hint="City"
                            android:inputType="text"
                            android:padding="@dimen/_10sdp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray">

                        </EditText>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_margin="@dimen/_10sdp"
                        app:cardCornerRadius="@dimen/_8sdp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:hint="State"
                            android:inputType="text"
                            android:padding="@dimen/_10sdp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray">

                        </EditText>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_margin="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_8sdp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="@string/zip_code"
                        android:inputType="number"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"></EditText>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_margin="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_8sdp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="@string/mobile_number"
                        android:inputType="number"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray">

                    </EditText>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_margin="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_8sdp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="@string/email_address"
                        android:inputType="text"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray">

                    </EditText>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_margin="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_8sdp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="@string/set_password"
                        android:inputType="text"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray">

                    </EditText>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Set Price per 15 min Video Call"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_margin="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_8sdp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="Rs. 1.245"
                        android:inputType="number"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray">

                    </EditText>

                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <CheckBox
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                    </CheckBox>

                    <TextView
                        android:padding="@dimen/_5sdp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/agree_to"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        />

                </LinearLayout>


                <RelativeLayout
                    android:id="@+id/RRPay"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/border_btn">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="20sp"
                        android:text="@string/signup"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/llLogin"
                    android:padding="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Already have an account?"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/_16sdp"
                         />

                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:gravity="center"
                        android:text="@string/login"
                        android:textColor="@color/light_yellow"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold"
                        />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</layout>
